fix crop image being too big

--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -25,3 +25,7 @@ body {
 .top-buffer {
     margin-top:20px;
 }
+
+.cropper-container {
+    max-width: 100%;
+}
